For 1.20.2
	- Linux: XLib errors limited to 20; more than that FreeWRL exits. (ideally, no
	  XLib errors would occur; this is just to help in case of failures elsewhere)

For 1.20.1
	- Midi nodes - pan values were reversed. Fixed.

	- polyrep collision with high NavigationInfo speed not working 100%; some changes
	  made, but code still needs debugging.

	- "Sensitive" nature of sensitive nodes would flow up the scenegraph too far, now
	  code verifies that sensitive nodes are indeed registered; branches above sensitive
	  nodes ignored.

	- Collision equations for collision with Polyreps improved by having a quick check
	  to reduce testing on all triangles of distant shapes.

	- Frustum culling was not working on OSX computers - differences in OpenGL headers
	  between Linux and OSX; a #ifdef AQUA added to differentiate.

	- EAI/SAI changes for VRML parser - keep DEFines around between calls of cParse.

	- possible threading issue fixed whereby a script can be called in Routing before parsing has
	  initialized it.

For 1.20.0 (Some came out with 1.19.9 for Linux):
	- Routing to SFImages was broken - tests/Javascript/SFImage.wrl works with new parser.

	- Classic parser - refactor DEF and USE within MF* fields.

	- Linux Sound - changed the maximum number of concurrent sound files to 128.

	- PROTO expansion for SFNodes verified.

	- KeySensor and StringSensor written and tested on OSX and Linux.

	- Javascript SFString events were calling an incorrect Javascript call;
	  changed all JS_NewString calls to JS_NewStringCopyZ.

	- added code in Javascript to enable println command; it is just a copy of print, as most
	  scripts seem to assume that print gives a carrage return.

	- X3DParser reviewed, and parts rewritten 

	- parse (only) x3dv COMPONENT, EXPORT, IMPORT, META, PROFILE statements. Note that currently nothing
	  is done with these statements.

	- VRML,x3dv routing to nodes with both (set_x and x) fields was broken - ensure that we route