@@ -9,7 +9,6 @@ DEBUG => "off",
 BROWSER => "/Applications/Safari.app/Contents/MacOS/Safari",
 WGET => "/usr/bin/curl",
 ASCIITERM => "/usr/X11R6/bin/rxvt",
-CONVERT => "/usr/local/bin/convert",
 UNZIP => "/usr/bin/gunzip",
 
 # Java compiler - if no java, comment this line and the JAVA_INST line below.
@@ -29,15 +28,10 @@ FREEWRL_CCFLAGS => '-arch ppc -mmacosx-version-min=10.4',
     FREEWRL_LIBS => '-L/usr/lib '.
 		'-L/usr/local/lib '.
 		'-L/System/Library/Frameworks/OpenGL.framework/Libraries '.
-		'-L/FreeWRL/jpeg-6b '.
-		'-ljpeg '.
-		'-lpng12 '.
 		'-lexpat '.
-		'-lz '.
 		'-lSystem '.
 		'-lfreetype '.
-		'-lGL -lGLU '.
-		' -F/System/Library/Frameworks -framework OpenGL -framework GLUT -framework Cocoa',
+		' -F/System/Library/Frameworks -framework OpenGL -framework GLUT -framework Cocoa -framework QuickTime',
 
     # when building on Leopard 10.5, keep the version at 10.4 - see:
     # http://lists.apple.com/archives/Xcode-users/2007/Oct/msg00696.html
@@ -46,7 +40,7 @@ FREEWRL_CCFLAGS => '-arch ppc -mmacosx-version-min=10.4',
     #had a problem with the redefinition of uint64, try to define _UINT64 and see what happens
     FREEWRL_DEFINE => '-DAQUA -DARCH_PPC -D_REENTRANT -D_UINT64 -arch ppc -mmacosx-version-min=10.4 -fno-common',
 
-    FREEWRL_INC => '-I/FreeWRL/jpeg-6b '.
+    FREEWRL_INC => 
 		'-I/System/Library/Frameworks/OpenGL.framework/Headers '.
 		'-I/System/Library/Frameworks/GLUT.framework/Headers '.
 		'-I/System/Library/Frameworks/ApplicationServices.framework/Versions/Current/Frameworks/CoreGraphics.framework/Versions/A/Headers/ '.
